Enleve vieux texte heat only V1V2

--- a/tex/EtudeExperimentale.tex
+++ b/tex/EtudeExperimentale.tex
@@ -95,7 +95,7 @@ L'évolution de température $\theta$ au cours de l'expérience à l'amplitude a
 
 \subsubsection{Expériences avec le réfrigérateur vertical}
 \paragraph{Sans acoustique}
-Avant de s'intéresser aux expériences dans lesquelles tous les effets sont combinés, un essai est exécuté en l'absence de sources acoustique pour étudier l'effet de la convection naturelle pour une fréquence nulle. La figure \ref{fig:HeatOnly_CHXout_V1V2} montre l'évolution de la température dans la cavité d'adaptation d'impédance, après allumage d'une charge thermique fournie par les résistances chauffantes placées dans l'échangeur froid. À \qty{50}{\second}, les charges thermiques sont alimentées, et les températures à proximité immédiate de l'échangeur --- les thermocouples \numlist{1;2;3} --- augmentent. La charge thermique est la même dans les deux orientations, mais les températures atteintes diffèrent : le thermocouple au centre relève \textcolor{red}{blabla}. L'explication vient en observant également le comportement de la température de l'autre côté de la cavité, devant la source acoustique principale. En effet, l'allure des courbes noires est complètement différente d'une orientation à l'autre. Dans le cas où la source acoustique est en dessous du noyau, l'évolution de la température est nulle, tandis que lorsqu'elle est au-dessus, sa température est égale à celle relevée autour de la charge thermique, quand bien même avec un retard dû à la vitesse.
+\textcolor{red}{ICI les manips heat only}
 
 \begin{figure}[!ht]
     \centering
