--- a/tex/AHX.tex
+++ b/tex/AHX.tex
@@ -1,5 +1,5 @@
 \chapter{Caractérisation de l'échangeur ambiant}\label{chap:AHX}
-Cette partie concerne la mesure de la chaleur extraite par l'échangeur ambiant $\dot Q_a$. Cet échangeur en cuivre conçu durant le projet \textsc{Tacot} et représenté sur la figure~\ref{fig:AHXschema} est imprimé en 3D, et contient un circuit de canaux dans lequel circule de l'eau dont le débit peut être contrôlé \cite{ANR_thermo-acoustic_2019, ramadan_design_2021}. Son rôle est de maintenir l'extrémité chaude du régénérateur à température ambiante pour éviter l'échauffement globale du réfrigérateur. 
+Cette partie concerne la mesure de la chaleur extraite par l'échangeur ambiant $\dot Q_a$. Cet échangeur en cuivre conçu durant le projet \textsc{Tacot} et représenté sur la figure~\ref{fig:AHXschema} contient un circuit de canaux dans lequel circule de l'eau dont le débit peut être contrôlé \cite{ANR_thermo-acoustic_2019, ramadan_design_2021}. Son rôle est de maintenir l'extrémité chaude du régénérateur à température ambiante pour éviter l'échauffement globale du réfrigérateur. 
 
 \begin{figure}[!ht]
     \centering
