rounded corners legends

--- a/fig/fig_ConvNat_Acou/tex/fig_Acou_CHXin_V1V2_Mid.tex
+++ b/fig/fig_ConvNat_Acou/tex/fig_Acou_CHXin_V1V2_Mid.tex
@@ -13,7 +13,7 @@
 	ymin=-40,ymax=25,
     xtick={0,600,1200,1800,2400,3000,3500},%ytick={0,9.1120/100000,1.4452/10000,2.5/10000,5/10000,1/1000},
     domain=0:100,
-    legend style = {at={(1.01,1.05)},anchor = north east},legend columns=3,
+    legend style = {at={(1.01,1.05)},anchor = north east,rounded corners},legend columns=3,
     ]
     
     	\addlegendimage{legend image with text=}
