--- a/fig/fig_dKdV/tex/fig_dKdV.tex
+++ b/fig/fig_dKdV/tex/fig_dKdV.tex
@@ -19,7 +19,7 @@
     xmin=0,xmax=75,ymin=0,ymax=.5/1000,
     xtick={0,25,47,50,75,100},ytick={0,9.1120/100000,1.4452/10000,2.5/10000,5/10000,1/1000},
     domain=0:100,
-    legend style = {at={(.95,.95)},anchor = north east}
+    legend style = {at={(.95,.95)},anchor = north east,rounded corners}
     ]
         \addplot[solid,ultra thick,draw=MatlabBlue] file {../fig/fig_dKdV/data/data_dK.txt};
         \addplot[solid,ultra thick,draw=MatlabOrange] file {../fig/fig_dKdV/data/data_dV.txt};
