--- a/fig/fig_ConvNat_Acou/tex/fig_Acou_CHXout_H1H2_High.tex
+++ b/fig/fig_ConvNat_Acou/tex/fig_Acou_CHXout_H1H2_High.tex
@@ -13,7 +13,7 @@
 	 ymin=-30,ymax=10,
     xtick={0,600,1200,1800,2400,3000,3500},%ytick={0,9.1120/100000,1.4452/10000,2.5/10000,5/10000,1/1000},
     domain=0:100,
-    legend style = {at={(1.01,1.05)},anchor = north east},legend columns=3,
+    legend style = {at={(1.01,1.05)},anchor = north east,rounded corners},legend columns=3,
 %    legend cell align={right},
     ]
     	
@@ -24,7 +24,7 @@
 		\addlegendimage{legend image with text=`\texttt{H2}'} 
 		\addlegendentry{}   
     
-    	\addlegendimage{legend image with text=Source acoustique principale}
+    	\addlegendimage{legend image with text=TC 0}
     	\addlegendentry{}
     	
     	\addplot[ultra thick,black] file {{../fig/fig_ConvNat_Acou/data/DataMatTxtH1H2High/data_TC0_0beg_RixHigh_PhaseRIXHP-60°_OrientationH1_Qc0W_Serie1.txt}};\addlegendentry{}
