--- a/tex/IndexNotations.tex
+++ b/tex/IndexNotations.tex
@@ -3,7 +3,7 @@
 \textcolor{red}{Taille de la 2\ieme{} colonne pour remplir la page + reparcourir manuscript pour vérifier que c'est complet et cohérent}
 
 \begin{center}
-    \begin{tabular}{ll}
+    \begin{tabular}{p{.15\textwidth} p{.75\textwidth}}
 %    	\hline
         \multicolumn{2}{c}{Lettres latines}  \\\hline
         \textbf{Symbole} & \textbf{Définition} \\\hline\hline
@@ -40,7 +40,7 @@
 \newpage
 
 \begin{center}
-    \begin{tabular}{ll}
+    \begin{tabular}{p{.15\textwidth} p{.75\textwidth}}
 %    	\hline
         \multicolumn{2}{c}{Lettres grecques \textcolor{red}{ordre alphabétique ?}}  \\\hline
         \textbf{Symbole} & \textbf{Définition} \\\hline\hline
@@ -65,7 +65,7 @@
 \bigskip
 
 \begin{center}
-	\begin{tabular}{ll}
+    \begin{tabular}{p{.15\textwidth} p{.75\textwidth}}
 %		\hline
 		\multicolumn{2}{c}{Indices et exposants}  \\\hline
 		\textbf{Symbole} & \textbf{Définition} \\\hline\hline
@@ -74,6 +74,7 @@
 		$\bullet^*$ & Conjugué complexe\\
 		$\bullet_p$ & Lié au matériau poreux\\		
 		$\bullet_g$ & Relatif au gaz dans le matériau poreux\\
-		$\bullet_s$ & Relatif au solide du matériau poreux
+		$\bullet_s$ & Relatif au solide du matériau poreux\\
+		\hline
 	\end{tabular}
 \end{center}
