--- a/tex/_main_.tex
+++ b/tex/_main_.tex
@@ -57,6 +57,8 @@
 \usepackage{csquotes}
 \usepackage{wrapfig}
 \usepackage{multicol}
+\usepackage{array}
+	\setlength{\extrarowheight}{5pt}
 \usepackage{float}
 % -----------------------------------------------------
 \usepackage[dvipsnames]{xcolor}
