--- a/fig/fig_OrientationCore/tex/subfig_OrientationCoreV1.tex
+++ b/fig/fig_OrientationCore/tex/subfig_OrientationCoreV1.tex
@@ -28,8 +28,8 @@
 %    \def\CoreY{.9*\LY};
 %    
 
-	\def\L{2};
-	\def\R{6};
+	\def\L{1.5};
+	\def\R{5};
 	\def\HX{.25};
 	\def\decalage{\R/2-\L/2};
 
@@ -42,8 +42,11 @@
 				\draw ({-(\R-.4)/2*\r+\R-.2},{\z*(1+\L)/4-.5}) node(n\z\r){\num};
 }}
 
-		\draw (n40.south east) node [right]{AHX};
-		\draw (n00.north east) node[right]{CHX};
-		\draw (n01.south) node [below]{\shortstack{ $\downarrow$ \\Source acoustique principale}};
+		\draw (n40.south east) node [right]{Ambiant};
+		\draw (n00.north east) node[right]{Froid};
+		\draw ($(n01.south)+(0,-.5cm)$) node (RIX){0} node[anchor=north]{\begin{tabular}{c}
+		$\downarrow$\\
+		Source acoustique principale
+		\end{tabular}};
 		
 \end{tikzpicture}
