--- a/tex/DispositifExpe.tex
+++ b/tex/DispositifExpe.tex
@@ -206,23 +206,27 @@ Enfin, l'orientation `\texttt{V2}' affichée sur la figure~\ref{fig:OrientationC
 
 \subsection{Acquisitions}
 \subsubsection{Procédures d'acquisition}
-Les acquisitions sont réalisées en plusieurs temps. Tout d'abord, à chaque début de journée de campagne, l'état initial de toutes les grandeurs est acquis sur une minute et sauvegardé sous un label `\texttt{init}'. Cela permet de garder en mémoire toutes les conditions expérimentales initiales dont les valeurs peuvent potentiellement influer sur le comportement du réfrigérateur, comme par exemple la température ambiante ou la pression statique. 
+Les acquisitions sont réalisées en plusieurs temps. Tout d'abord et pour toutes les expériences,  l'état initial de toutes les grandeurs est acquis sur une minute et sauvegardé sous un label `\texttt{init}' à chaque début de journée de campagne. Cela permet de garder en mémoire toutes les conditions expérimentales initiales dont les valeurs peuvent potentiellement influer sur le comportement du réfrigérateur, comme par exemple la température ambiante ou la pression statique. \medskip
 
-\paragraph{Mesures sans acoustique}
-Pour les mesures sans acoustique labellisées `\texttt{heat\_{}only}', le protocole est plus simple. Après l'acquisition initiale `\texttt{init}', la charge thermique est appliquée au noyau sans alimenter les sources acoustiques. Cette charge thermique peut prendre trois formes : un écoulement d'eau dans l'échangeur ambiant, un chauffage par les résistances chauffantes, ou les deux à la fois. Ces mesures permettent d'étudier la distribution de température en l'absence d'écoulement oscillant, ainsi que de calculer les valeurs de conductivité thermique $k_x$ et $k_r$ qui sont présentées équation~\eqref{eq:FluxCond_Lotton}.
+Ensuite, en prévision de la mesure de flux de chaleur $\dot Q_a$ extrait par l'échangeur ambiant (voir l'annexe~\ref{chap:AHX}), l'eau est préalablement mise en circulation dans cet échangeur après avoir démarré une acquisition des 30 capteurs jusqu'à stabilisation de la distribution de température dans le noyau. L'acquisition est ensuite interrompue et enregistrée avec un label `\texttt{Water}'. \bigskip
+
+L'étape suivante dépend du type d'expérience menée : les mesures peuvent être sans ou avec acoustique.
+
+\paragraph{Mesures sans acoustique}\label{chap:MesureSansAcou}
+Pour ces mesures labellisées `\texttt{heat\_{}only}', la charge thermique est appliquée au noyau sans alimenter les sources acoustiques. Cette charge thermique consiste en l'alimentation des cartouches chauffantes contenues dans l'échangeur froid par une puissance électrique connue. 
+
+Ces mesures permettent d'étudier la distribution de température en l'absence d'écoulement oscillant, ainsi que de calculer les valeurs de conductivité thermique $k_x$ et $k_r$ dans l'équation~\eqref{eq:FluxCond_Lotton}ou les coefficients de pertes latérales $h_x$ et $h_r$ dans l'équation~\eqref{eq:FluxLat_Lotton}.\medskip
 
 Dans ce type d'expériences, les noms des zones \og froide \fg{} et \og ambiante \fg{} sont conservés pour des raisons de clarté, mais l'eau circulant dans l'échangeur ambiant et les cartouches chauffantes se trouvant dans l'échangeur froid, la direction du gradient de température dans le noyau thermoacoustique est inversée par rapport aux expériences avec acoustique. %Toutefois, les ordres de grandeur des différences de température sont les mêmes que pour les expériences avec acoustique, c'est-à-dire 
 
 Pour garder un moyen de comparaison avec les mesures avec acoustique, le mélange de gaz est le même.
 
-\paragraph{Mesures avec acoustique}\label{chap:MesureAvecAcou} Pour les expériences avec acoustique, le protocole est plus complexe. En prévision de la mesure de flux de chaleur $\dot Q_a$ extrait par l'échangeur ambiant (voir l'annexe~\ref{chap:AHX}), l'eau est préalablement mise en circulation dans cet échangeur après avoir démarré une acquisition des 30 capteurs jusqu'à stabilisation de la distribution de température dans le noyau. L'acquisition est ensuite interrompue et enregistrée avec un label `\texttt{Water}' \textcolor{red}{\og \texttt{Water} \fg{} ?}.
-
-L'étape suivante concerne le régime transitoire après allumage des sources acoustiques. Une acquisition étiquetée `\texttt{Acou}' est démarrée, puis les sources sont alimentées jusqu'à l'amplitude souhaitée. Au bout d'une heure, l'acquisition est arrêtée et sauvegardée. En l'absence d'expérience avec charge thermique, cela sonne la fin de l'expérience : toutes les sources acoustiques et circulations d'eau sont progressivement arrêtées et le réfrigérateur est laissé pour un retour à l'état initial. 
+\paragraph{Mesures avec acoustique}\label{chap:MesureAvecAcou} 
+Une acquisition étiquetée `\texttt{Acou}' est démarrée, puis les sources sont alimentées jusqu'à l'amplitude souhaitée. Au bout d'une heure, l'acquisition est arrêtée et sauvegardée. En l'absence d'expérience avec charge thermique, cela sonne la fin de l'expérience : toutes les sources acoustiques et circulations d'eau sont progressivement arrêtées et le réfrigérateur est laissé pour un retour à l'état initial. \textcolor{red}{08/11/2024}
 
 Au cours de cette étude, trois amplitudes acoustiques sont choisies. La première correspond à un \textit{drive ratio} $DR=\frac{p}{P_0}=\qty{.4}{\percent}$, soit une amplitude très faible où l'effet thermoacoustique est à peine visible. Ainsi, l'hypothèse concernant la linéarité acoustique est mieux vérifiée et peut plus aisément être comparé à la théorie linéaire. À l'inverse, le \textit{drive ratio} de la deuxième amplitude est le plus élevé avec $DR=\qty{3.5}{\percent}$, et est celui pour lequel les performances du réfrigérateur ($COP$, $Q_f$, ...) sont les plus élevées obtenues avec cette machine \cite{ramadan_design_2021}, mais aussi qui présentent de forts écarts à la théorie. La troisième est choisie à un \textit{drive ratio} intermédiaire où $DR=\qty{2}{\percent}$. 
 
 En revanche, certains des paramètres d'excitation reste constant pour toutes les expériences : la fréquence est toujours de \qty{47}{\hertz}, pour laquelle la prédiction des performances annonce les meilleurs résultats. C'est également la première fréquence de résonance de la source principale, et son facteur de qualité très élevé (\textcolor{red}{$Q_{ts}=$}) ainsi que la faible valeur de résistance de la bobine ($R_e=\qty{.7}{\ohm}$) empêchent l'amplificateur QSC de fonctionner à une autre fréquence sans l'endommager, l'impédance minimale supportée étant de \qty{2}{\ohm}. Ensuite, le déphasage inter-source $\varphi_{2-1}$ est également fixé à \ang{-60}, ce que le modèle \textsc{DeltaEC} indique comme déphasage optimale et que des expériences préliminaires confirment. Enfin, le gaz est également le même dans toutes les expériences. Il est composé de \qty{65}{\percent} d'hélium et de \qty{35}{\percent} d'argon, et le tout est pressurisé à \qty{4e6}{\pascal}.
-
 
 
 \subsubsection{Paramètres d'acquisition}
