Update figures et Nusselt

--- a/tex/_main_.tex
+++ b/tex/_main_.tex
@@ -1,5 +1,5 @@
 %---------------------------------------------------------------------%
-\documentclass[a4paper,12pt]{book} 
+\documentclass[a4paper,12pt]{book}
 %\documentclass[a4paper,12pt]{report}
 %---------------------------------------------------------------------%
 % MODIFY TEXT APPEARANCE
@@ -168,7 +168,9 @@
 	\sisetup{locale = FR,
 	    detect-all,
 	    exponent-product = \cdot,
-    	group-separator = \text{\,}}
+    	group-separator = \text{\,},
+%    	per-mode = symbol
+    	}
 \usepackage{multirow}
 %\usepackage{minitoc}
 \usepackage{etoc}
@@ -276,6 +278,7 @@ Encadrants : & Hélène Bailliet, \textit{Université de Poitiers}\\
 \date{Janvier 2025}
 
 %\dominitoc
+\raggedbottom
 %---------------------------------------------------------------------%
 \begin{document}
 %---------------------------------------------------------------------%
