--- a/fig/fig_OrientationCore/tex/subfig_OrientationCoreV1.tex
+++ b/fig/fig_OrientationCore/tex/subfig_OrientationCoreV1.tex
@@ -39,12 +39,12 @@
 
 		\foreach \z [evaluate=\z] in {0,...,4}{
 			\foreach \r [evaluate=\r as \num using int(\r+1 + 3*\z)] in {0,...,2}{
-				\draw ({-(\R-.4)/2*\r+\R-.2},{\z*(1+\L)/4-.5}) node(n\z\r){\num};
+				\draw ({-(\R-.4)/2*\r+\R-.2},{\z*(1+\L)/4-.5}) node(n\z\r){\scriptsize \num};
 }}
 
 		\draw (n40.south east) node [right]{Ambiant};
 		\draw (n00.north east) node[right]{Froid};
-		\draw ($(n01.south)+(0,-.5cm)$) node (RIX){0} node[anchor=north]{\begin{tabular}{c}
+		\draw ($(n01.south)+(0,-.5cm)$) node (RIX){\scriptsize 0} node[anchor=north]{\begin{tabular}{c}
 		$\downarrow$\\
 		Source acoustique principale
 		\end{tabular}};
